Fix Header ( up div ) align

--- a/modulo2/react/digital_store/src/index.css
+++ b/modulo2/react/digital_store/src/index.css
@@ -16,7 +16,6 @@
   background-color: var(--white-color);
 }
 #logo-header{
-  background-color: aqua;
   width: 243px;
   height: 44px;
 }
